remove some bugs

--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ header .container {
     justify-content: space-around; }
     header .container .menu-wraper li {
       position: relative;
-      padding: 10px 25px; }
+      padding: 20px 25px; }
       header .container .menu-wraper li a {
         font-family: "Verdana Regular", tahoma;
         font-size: 14px;
@@ -605,33 +605,62 @@ footer {
       border-right: 45px solid transparent;
       border-bottom: 45px solid #343434; } }
 @media screen and (max-width: 800px) {
-  header .container .menu-wraper {
+  header .menu-wraper {
     position: absolute;
     right: 0;
     width: 100%;
+    height: 100%;
     background-size: cover;
     background-color: rgba(0, 0, 0, 0.5);
     flex-direction: column;
     transition: 0.4s;
     transform: translateX(-100%); }
-    header .container .menu-wraper li {
+    header .menu-wraper li {
       padding: 10px 30px;
       text-align: center; }
-  header .container .active {
+  header .active {
     transform: translateX(0); }
-  header .container .responsive-btn {
+  header .responsive-btn {
+    position: relative;
     padding: 5px 5px;
     border: 2px solid #fff;
     border-radius: 10px;
     margin-right: 5px;
+    height: 45px;
     width: 45px; }
-    header .container .responsive-btn .row {
+    header .responsive-btn .row {
       width: 100%;
       height: 3px;
       margin-top: 5px;
       margin-bottom: 5px;
-      background-color: #fff; } }
+      background-color: #fff;
+      transition: width,opacity,0.4s; }
+  header .clicked .row {
+    position: absolute; }
+    header .clicked .row:nth-child(1) {
+      top: 14px;
+      left: 6px;
+      width: 70%;
+      transform: skewY(-45deg); }
+    header .clicked .row:nth-child(2) {
+      opacity: 0; }
+    header .clicked .row:nth-child(3) {
+      top: 14px;
+      left: 6px;
+      width: 70%;
+      transform: skewY(45deg); } }
 @media screen and (max-width: 550px) {
+  header .container .header-head {
+    font-size: 25px; }
+
+  .contact .contact-head {
+    font-size: 25px;
+    line-height: 35px; }
+
+  .we-do .we-do-head {
+    font-size: 25px;
+    line-height: 35px; }
+
   .about .fx-container .content-container .slider-wraper {
     height: auto; }
     .about .fx-container .content-container .slider-wraper .slide img {
